--- a/css/styles.css
+++ b/css/styles.css
@@ -162,26 +162,30 @@ a {
   color: #fff;
 }
 
-.section-one-button {
-  display: block;
-  cursor: pointer;
-  padding: 16px 32px;
-  border-radius: 4px;
+.button {
   border: none;
-  margin: auto;
-  min-width: 169px;
-  margin-top: 48px;
+  border-radius: 4px;
   background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
+}
+
+.section-one-button {
+  display: block;
+  cursor: pointer;
+  padding: 16px 32px;
+  margin: auto;
+  min-width: 169px;
+  margin-top: 48px;
+
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-one-button:hover,
-.section-one-button:focus {
+.button.section-one-button:hover,
+.button.section-one-button:focus {
   background-color: #404bbf;
 }
 
@@ -440,6 +444,10 @@ a {
   color: #f4f4fd;
 }
 
+.media-container {
+  margin-right: 80px;
+}
+
 .footer-icon-list {
   gap: 16px;
 }
@@ -451,4 +459,41 @@ a {
 .footer-icon-link:hover,
 .footer-icon-link:focus {
   background-color: #31d0aa;
+}
+
+.footer-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: inherit;
+  padding: 8px 16px;
+}
+.footer-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.button-container {
+  margin-left: auto;
+  margin-top: auto;
+}
+
+.footer-button {
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 16px;
+}
+
+.footer-button-icon-icon {
+  fill: #fff;
 }
