--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ a {
 .section-one-button {
   display: block;
   padding: 16px 32px;
-  margin: auto;
+  margin: 0 auto;
   min-width: 169px;
   margin-top: 48px;
 
@@ -193,7 +193,8 @@ a {
 .section-two {
   padding: 120px 0;
 }
-.section-two-header {
+
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -516,4 +517,35 @@ a {
 .footer-button-icon-icon {
   fill: #fff;
   margin-left: 16px;
+}
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(46, 47, 66, 0.4);
+}
+
+.modal {
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  position: absolute;
+  background-color: #fcfcfc;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+.backdrop-icon {
+}
+
+.modal-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
 }
