--- a/css/styles.css
+++ b/css/styles.css
@@ -550,6 +550,7 @@ a {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   padding: 72px 24px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -562,6 +563,7 @@ a {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
   padding: 0;
@@ -573,7 +575,7 @@ a {
 .modal-close-btn:focus {
   background-color: #404bbf;
   border: none;
-  fill: #fff;
+  fill: #ffffff;
 }
 
 .modal-icon {
@@ -598,9 +600,14 @@ a {
 .modal-field {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  margin-bottom: 8px;
+}
+
+.modal-label {
+  margin-bottom: 4px;
 }
 
 .modal-field-wrap {
@@ -618,10 +625,33 @@ a {
   border-radius: 4px;
   width: 360px;
   height: 40px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form-input:hover,
+.form-input:focus {
+  border-color: #4d5ae5;
+}
 .textarea-input {
   height: 120px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-input:hover,
+.textarea-input:focus {
+  border-color: #4d5ae5;
 }
 
 .modal-btn {
