--- a/css/styles.css
+++ b/css/styles.css
@@ -623,11 +623,6 @@ a {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-field-icon:hover,
-.modal-field-icon:focus {
-  fill: #4d5ae5;
-}
-
 .form-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
@@ -639,10 +634,6 @@ a {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:hover,
-.form-input:focus {
-  border-color: #4d5ae5;
-}
 .textarea-input {
   height: 120px;
   font-weight: 400;
@@ -655,11 +646,6 @@ a {
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.textarea-input:hover,
-.textarea-input:focus {
-  border-color: #4d5ae5;
 }
 
 .privacy {
@@ -690,4 +676,6 @@ a {
 .modal-btn {
   width: 169px;
   height: 56px;
+  display: block;
+  text-align: center;
 }
