--- a/css/styles.css
+++ b/css/styles.css
@@ -606,10 +606,6 @@ a {
   margin-bottom: 8px;
 }
 
-.modal-label {
-  margin-bottom: 4px;
-}
-
 .modal-field-wrap {
   position: relative;
 }
@@ -643,6 +639,7 @@ a {
   color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
   padding: 8px 16px;
+  margin-bottom: 16px;
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -657,7 +654,7 @@ a {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-bottom: 24px;
+  margin-bottom: 4px;
 }
 
 .modal-label .fake-check {
@@ -670,7 +667,7 @@ a {
 
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
@@ -691,8 +688,9 @@ a {
 }
 
 .modal-btn {
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   display: block;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
