--- a/css/styles.css
+++ b/css/styles.css
@@ -571,20 +571,20 @@ a {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-icon {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: #404bbf;
   border: none;
 }
 
-.modal-icon:hover,
-.modal-icon:focus {
+.modal-close-btn:hover .modal-icon,
+.modal-close-btn:focus .modal-icon {
   fill: #ffffff;
-}
-
-.modal-icon {
-  fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-text {
@@ -614,6 +614,11 @@ a {
   position: relative;
 }
 
+.form-input:hover,
+.form-input:focus {
+  border: 1px solid #4d5ae5;
+}
+
 .modal-field-icon {
   position: absolute;
   left: 16px;
@@ -621,6 +626,10 @@ a {
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:hover + .modal-field-icon,
+.form-input:focus + .modal-field-icon {
+  fill: #4d5ae5;
 }
 
 .form-input {
@@ -655,9 +664,7 @@ a {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
-  align-items: center;
-  gap: 8px;
+  display: block;
   margin-bottom: 4px;
 }
 
@@ -668,6 +675,7 @@ a {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
+  margin-right: 8px;
 
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
