--- a/css/styles.css
+++ b/css/styles.css
@@ -658,17 +658,17 @@ a {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-label-checkbox {
+.modal-label {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: block;
-  margin-bottom: 24px;
+  margin-bottom: 4px;
 }
 
-.modal-label-checkbox .fake-check {
+.modal-label .fake-check {
   width: 16px;
   height: 16px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
