--- a/css/styles.css
+++ b/css/styles.css
@@ -643,6 +643,9 @@ a {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-field-margin {
+  margin-bottom: 16px;
+}
 .textarea-input {
   height: 120px;
   font-weight: 400;
@@ -652,10 +655,14 @@ a {
   color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
   padding: 8px 16px;
-  margin-bottom: 16px;
+
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-field-checkbox {
+  margin-bottom: 24px;
 }
 
 .modal-label {
